<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>analyzer</artifactId>
        <groupId>eu.fasten</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <groupId>eu.fasten.analyzer</groupId>
    <artifactId>pom-analyzer</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>pom-analyzer</name>

    <dependencies>
        <dependency>
            <groupId>eu.fasten</groupId>
            <artifactId>core</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>eu.fasten</groupId>
            <artifactId>server</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.3</version>
        </dependency>
        <dependency>
            <groupId>jaxen</groupId>
            <artifactId>jaxen</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>3.14.4</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-depchain</artifactId>
			<version>3.1.4</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
			<version>3.1.4</version>
		</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.slf4j:slf4j-simple:*</exclude>
                                    <exclude>org.slf4j:slf4j-api:*</exclude>
                                    <exclude>org.apache.kafka:kafka-clients:*</exclude>
                                </excludes>
                            </artifactSet>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>eu.fasten.analyzer.pomanalyzer.Main</Main-Class>
                                        <X-Compile-Source-JDK>11</X-Compile-Source-JDK>
                                        <X-Compile-Target-JDK>11</X-Compile-Target-JDK>
                                        <Plugin-Class>eu.fasten.analyzer.pomanalyzer.POMAnalyzerPlugin</Plugin-Class>
                                        <Plugin-Id>pom-analyzer</Plugin-Id>
                                        <Plugin-Version>0.1.2</Plugin-Version>
                                        <Plugin-Description>POM Analyzer Plugin</Plugin-Description>
                                        <Plugin-License>Apache License 2.0</Plugin-License>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                            <outputDirectory>${session.executionRootDirectory}/docker/plugins/</outputDirectory>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>with-dependencies</shadedClassifierName>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                                <exclude>eu/fasten/core/plugins/*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <annotationProcessors>
                        <annotationProcessor>org.pf4j.processor.ExtensionAnnotationProcessor</annotationProcessor>
                    </annotationProcessors>
                    <source>1.11</source>
                    <target>1.11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <configuration>
                    <excludes>
                        <exclude>**/Main.*</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>